--- a/index.html
+++ b/index.html
@@ -1,50 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-<div class="calculator">
-    <form>
-        <div class="display">
-            <input type="text" name="display">
-
-        </div>
-        <div> 
-            <input type="button" value="AC"  onclick="display.value = '' " class="operator">
-            <input type="button" value="DEL" onclick="display.value = onclick= display.value.toString().slice(0,-1)" class="operator">
-            <input type="button" value="."   onclick="display.value += '.' " class="operator">
-            <input type="button" value="/"   onclick="display.value += '/' " class="operator">
-        </div>
-        <div> 
-            <input type="button" value="7" onclick="display.value += '7' ">
-            <input type="button" value="8" onclick="display.value += '8' ">
-            <input type="button" value="9" onclick="display.value += '9' ">
-            <input type="button" value="*" onclick="display.value += '*' " class="operator">
-        </div>
-        <div> 
-            <input type="button" value="4" onclick="display.value += '4' ">
-            <input type="button" value="5" onclick="display.value += '5' ">
-            <input type="button" value="6" onclick="display.value += '6' ">
-            <input type="button" value="-" onclick="display.value += '-' " class="operator">
-        </div>
-        <div> 
-            <input type="button" value="1" onclick="display.value += '1' " >
-            <input type="button" value="2" onclick="display.value += '2' ">
-            <input type="button" value="3" onclick="display.value += '3' ">
-            <input type="button" value="+" onclick="display.value += '+' " class="operator">
-        </div>
-        <div> 
-            <input type="button" value="00"onclick="display.value += '00' ">
-            <input type="button" value="0" onclick="display.value += '0' ">
-            <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal">
-        </div>
-    </form>
-</div>
+        <form action="" name="calc" class="calculator">
+            <input type="text" class="value" readonly name="txt">
+            <span class="num clear" onclick="calc.txt.value=''"><i>C</i></span>
+            <span class="num" onclick="calc.txt.value='/'"><i>/</i></span>
+            <span class="num" onclick="calc.txt.value='*'"><i>C*</i></span>
+            <span class="num" onclick="calc.txt.value='7'"><i>7</i></span>
+            <span class="num" onclick="calc.txt.value='8'"><i>8</i></span>
+            <span class="num" onclick="calc.txt.value='9'"><i>9</i></span>
+            <span class="num" onclick="calc.txt.value='-'"><i>-</i></span>
+            <span class="num" onclick="calc.txt.value='4'"><i>4</i></span>
+            <span class="num" onclick="calc.txt.value='5'"><i>5</i></span>
+            <span class="num" onclick="calc.txt.value='6'"><i>6</i></span>
+            <span class="num plus" onclick="calc.txt.value='+'">+<i>C</i></span>
+            <span class="num" onclick="calc.txt.value='1'"><i>1</i></span>
+            <span class="num" onclick="calc.txt.value='2'"><i>2</i></span>
+            <span class="num" onclick="calc.txt.value='3'"><i>3</i></span>
+            <span class="num" onclick="calc.txt.value='0'"><i>0</i></span>
+            <span class="num" onclick="calc.txt.value='00'"><i>00</i></span>
+            <span class="num" onclick="calc.txt.value='.'"><i>.</i></span>
+        </form>
     </div>
 </body>
+
 </html>
